client/src/Components/StudentView/Students.css
@import "//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";

.student-view{
    text-align: center;
    display: flex;
    flex-direction: column;
    height: 95vh;
    margin: 2em 1.5em 2em 1.5em;
}

.student-search{
    font-family: FontAwesome;
    border-radius: 10em;
    padding: .5em;
}

.search-sort-buttons{
    display: flex;
    justify-content: space-between;
}

table {
    border-collapse: separate;
    border-spacing:0 11px;
    margin-top:-11px;
}

th {
    padding: .8em;
}

tr{
    margin: 1em;
    text-align: center;
}

td {
    border:2px solid black;
    border-style:solid none;
    padding:11px;
    background-color:lightgoldenrodyellow;
 }
  td:first-child {
    border-left-style:solid;
    border-top-left-radius:11em;
    border-bottom-left-radius:11em;
 }
 
 td:last-child {
    border-right-style:solid;
    border-bottom-right-radius:11em;
    border-top-right-radius:11em;
 }

 .student-img {
    border-radius: 50%;
 }

 .search-sort-buttons {
    padding: 0em 0 1.5em 0;
 }

